subiendo love panda completo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster|Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/grid.js">
+	<link rel="stylesheet" href="css/grid.css">
 	<link rel="stylesheet" href="css/media.css">
 	<link rel="stylesheet" href="js/app.js">
 
@@ -22,15 +22,12 @@
 			<div class="col-12">
 				<h4 class="subtitulo">The best place for panda lovers</h4>
 			</div>
-		</div>
-	</section>
-	<section id="fotoPortada">
-		<div class="row">
 			<div class="col-12">
-				<img class="portada" src="img/uno.jpg">
+				<img src="img/uno.jpg">
 			</div>	
 		</div>
 	</section>
+
 	<section id="aboutPandas">
 		<div class="row">
 			<div class="col-12">
@@ -42,8 +39,49 @@
 		</div>
 	</section>
 
+	<section id="segundaFoto">
+		<div class="row">
+			<div class="col-12">
+				<img src="img/dos.jpg">  <!--FOTO DE PANDAS ABRAZADOS-->
+			</div>
+		</div>
+	</section>
 
+	<section id="pictures">
+		<div class="row">
+			<div class="col-12">
+				<h3>Pictures</h3>
+			</div>
+			<div class="col-2">
+				<img class="pict" src="img/a1.jpg">
+			</div>
+			<div class="col-2">
+				<img class="pict" src="img/a2.jpg">
+			</div>
+			<div class="col-2">
+				<img class="pict" src="img/a3.jpg">
+			</div>
+			<div class="col-2">
+				<img class="pict" src="img/a4.jpg">
+			</div>
+		</div>
+	</section>
 
+	<section id="terceraFoto">
+		<div class="row">
+			<div class="col-12">
+				<img src="img/tres.jpg">
+			</div>
+		</div>
+	</section>
+
+	<section id="footer">
+		<div class="row">
+			<div class="col-12">
+				<h4>Love Love Panda - Laboratoria 2017</h4>
+			</div>
+		</div>
+	</section>
 	
 </body>
 </html>
