subiendo ultimos cambios

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<section id="aboutPandas">
 		<div class="row">
 			<div class="col-12">
-			 	<div class="col-6">
+			 	<div class="col-6 id=parrafo">
 					<h2>About Panda</h2>
 					<p> El panda, oso panda o panda gigante (Ailuropoda melanoleuca) es una especie de mamífero del orden de los carnívoros y aunque hay una gran controversia al respecto, los últimos estudios de su ADN lo engloban entre los miembros de la familia de los osos (Ursidae), siendo el oso de anteojos su pariente más cercano, si bien este pertenece a la subfamilia de los tremarctinos. Por otro lado, el panda rojo pertenece a una familia propia e independiente; Ailuridae. La especie está muy localizada. Nativo de China central, el panda gigante habita en regiones montañosas, principalmente las de Sichuan, hasta una altura de 3500 msnm.<br>Para 2016 se estima que la población total supera los 2000 ejemplares,2​ de los cuales 1864 viven en libertad,3​ demostrando que la cifra de pandas viviendo en libertad va en aumento. El oso panda es el símbolo de WWF (Fondo Mundial para la Naturaleza) desde 1961.<br>El principal alimento del panda es el bambú (en torno al 99 % de su dieta), aunque también se alimenta de frutos, pequeños mamíferos, peces, e insectos.4​ Es un buen trepador, aunque rara vez se le ve en los árboles. Se adapta a la cautividad y gracias a su pelaje soporta fácilmente las condiciones invernales de su hábitat.</p>		
 				</div>		    
